# MSD

./: .gitignore  README.md
.github/workflows/: main.yml
CS6011_ComputerProgramming/labs/: lab03_wireshark.txt
CS6013/Assignments/: CMakeLists.txt  lab1.c
CS6013_CompArch+OS/Assignments/: A02_vocab.txt  Conclusion.docx
CS6013_CompArch+OS/Assignments/A6_Parallels_OpenMP/: Analysis.docx  CMakeLists.txt  generate_plots.py  main  main.cpp
CS6013_CompArch+OS/Assignments/A6_Parallels_OpenMP/data/: omp_builtin_double_strong_scaling.csv  omp_builtin_double_weak_scaling.csv  omp_builtin_float_strong_scaling.csv  omp_builtin_float_weak_scaling.csv  omp_builtin_int_strong_scaling.csv  omp_builtin_int_weak_scaling.csv  omp_custom_double_strong_scaling.csv  omp_custom_double_weak_scaling.csv  omp_custom_float_strong_scaling.csv  omp_custom_float_weak_scaling.csv  omp_custom_int_strong_scaling.csv  omp_custom_int_weak_scaling.csv  std_threads_double_strong_scaling.csv  std_threads_double_weak_scaling.csv  std_threads_float_strong_scaling.csv  std_threads_float_weak_scaling.csv  std_threads_int_strong_scaling.csv  std_threads_int_weak_scaling.csv
CS6015_SoftwareEngineering/: HW_starterCode.cpp  run_bytes.cpp
CS6015_SoftwareEngineering/wc_exec/: e_run_wc.cpp
CS6018_App_Sys+Design/: download_file.py
CS6018_App_Sys+Design/Lab02_Maraca/: settings.gradle.kts
CS6018_App_Sys+Design/Lab06_ObjectDetectionServer/: settings.gradle.kts
CS6018_App_Sys+Design/lab08_ml_server/: Dockerfile  main.py  (+1 more)
CS6019_Capstone_Project/: FinalReport.docx  Proposal.docx  ~$oposal.docx
(+1464 files in other folders)
